# rePocket

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
rePocket/: Cargo.toml  README.md  repocket.service
rePocket/.cargo/: config.toml
rePocket/data/: template.html
rePocket/src/: main.rs  utils.rs
rePocket/src/articlehandler/: mod.rs
rePocket/src/fshandler/: mod.rs
rePocket/src/pocket/: credentials.rs  mod.rs
rePocket/src/pocketitem/: mod.rs
rePocket/src/pocketquery/: mod.rs
rePocketAuth/: Cargo.toml  README.md
rePocketAuth/.cargo/: config.toml
rePocketAuth/src/: main.rs
rePocketAuth/src/pocketauth/: mod.rs
scripts/: install.sh  simple_package.sh
